syntax = "proto3";
package ununifi.ethereum;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/tx/v1beta1/tx.proto";

option go_package = "github.com/UnUniFi/chain/app/middleware";

message SignDocForMetamask {
  cosmos.tx.v1beta1.TxBody body = 1;
  cosmos.tx.v1beta1.AuthInfo auth_info = 2;
  string chain_id = 3;
  uint64 account_number = 4;
}
